@@ -4,6 +4,10 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha2 
+	- Added ability to delete songs from a saved playlist
+	- Added ability to create a new playlist based on active playlist
+	- Fixed the Playlist Method 'Send on Add' so that it works, the
+		'Send and Clear' is still broken
 	- Fixed Advanced random
   	- Fixed missing artist name on Albums of the Moment
 	- Added simple Playlist element view, non-editable
